vaapipostproc: fails to negotiate with some formats
The issue was introduced in d8a47733. vaapipostproc fails to negotiate with formats that used to work and are still listed in the pad template.
Example:
gst-launch-1.0 videotestsrc is-live=true ! 'video/x-raw,format=UYVY' ! vaapipostproc ! fakesink
Logs show allowed caps are missing some formats:
postproc sink allowed caps is video/x-raw(memory:VASurface), format=(string){ NV12, I420, YV12, YUY2, ABGR, ARGB, xBGR, P010_10LE, BGRA, RGBA, BGR10A2_LE, VUYA, Y210, Y410 }, width=(int)[ 16, 16384 ], height=(int)[ 16, 16384 ], framerate=(fraction)[ 0/1, 2147483647/1 ]; video/x-raw(memory:DMABuf), format=(string){ NV12, I420, YV12, YUY2, ABGR, ARGB, xBGR, P010_10LE, BGRA, RGBA, BGR10A2_LE, VUYA, Y210, Y410 }, width=(int)[ 16, 16384 ], height=(int)[ 16, 16384 ], framerate=(fraction)[ 0/1, 2147483647/1 ]; video/x-raw, format=(string){ NV12, I420, YV12, YUY2, ABGR, ARGB, xBGR, P010_10LE, BGRA, RGBA, BGR10A2_LE, VUYA, Y210, Y410 }, width=(int)[ 16, 16384 ], height=(int)[ 16, 16384 ], framerate=(fraction)[ 0/1, 2147483647/1